--- a/src/index.css
+++ b/src/index.css
@@ -86,19 +86,19 @@ strong {
 .display-1 {
   font-size: 3.5rem;
   font-weight: 200;
-  line-height: 100px;
+  line-height: 1.5em;
 }
 
 .display-2 {
-  font-size: 2.8rem;
+  font-size: 2.6rem;
   font-weight: 200;
-  line-height: 80px;
+  line-height: 1.5em;
 }
 
 .display-3 {
   font-size: 2.5rem;
   font-weight: 200;
-  line-height: 46px;
+  line-height: 1.5em;
 }
 
 a,
@@ -186,7 +186,7 @@ h6 {
 p {
   font-size: 1.2rem;
   font-weight: 200;
-  line-height: 30px;
+  line-height: 1.4em;
   margin: 0 0 20px 0;
 }
 
@@ -207,7 +207,7 @@ p {
   text-transform: uppercase;
   font-size: .9rem;
   font-weight: 200;
-  line-height: 25px;
+  line-height: 1em;
 }
 
 .heading-and-content {
